<?xml version="1.0"?>
<package format="3">
  <name>agv_control</name>
  <version>0.0.0</version>
  <description>AGV control package with trajectory selection and tracking</description>
  <maintainer email="your_email@example.com">Ibrahim Boubakri</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>pyyaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
